--- a/petrJS/ch02/2_17 Получение элементов со стр_ч2/16 style.css
+++ b/petrJS/ch02/2_17 Получение элементов со стр_ч2/16 style.css
@@ -113,12 +113,34 @@ button {
 }
 
 .black{
+	width: 350px;
+	height: 50px;
+	line-height: 50px;
+	text-align: center;
+	background-color: rgb(148, 71, 71);
+	margin-bottom: 30px;
+	margin-top: 30px;
+	color: rgb(255, 255, 255);
+}
+
+.myBlack{
 	width: 150px;
 	height: 50px;
 	line-height: 50px;
 	text-align: center;
-	background-color: black;
+	background-color: rgb(27, 173, 218);
 	margin-bottom: 30px;
 	margin-top: 30px;
-	color: #fff;
+	color: rgb(255, 255, 255);
+}
+
+.myTegBlack{
+	width: 150px;
+	height: 50px;
+	line-height: 50px;
+	text-align: center;
+	background-color: rgb(240, 10, 221);
+	margin-bottom: 30px;
+	margin-top: 30px;
+	color: rgb(255, 255, 255);
 }
