--- a/petrJS/ch04/32_Задание Promise ES6/alex_testDomain/css/style.css
+++ b/petrJS/ch04/32_Задание Promise ES6/alex_testDomain/css/style.css
@@ -1,3 +1,7 @@
+/* my experiments by css */
+input[type=email]:valid { background: green }
+input[type=email]:invalid { background: red }
+
 /*style.css*/
 .fade {
   -webkit-animation-name: fade;
