--- a/petrJS/ch05/042 Написание тестов/www/css/bocoup.css
+++ b/petrJS/ch05/042 Написание тестов/www/css/bocoup.css
@@ -70,7 +70,7 @@ body {
 
 .editor .footer {
   opacity: 0.5;
-  -webkit-transition: opacity 0.1s linear;
+  -transition: opacity 0.1s linear;
   position: absolute;
   bottom: 1px;
   right: 1px;
@@ -88,7 +88,7 @@ body {
 
 body .CodeMirror pre {
   line-height: 1.5em;
-  letter-spacing: 1.5;
+  letter-spacing: 1.5em;
 }
 
 /* When initially scrolling to a line, this is how far down that line appears */
